[FIXED]: background contrast on small screen size

--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -45,6 +45,7 @@
 @media (max-width: $mediumScreenSize) {
   .mission {
     flex-direction: column;
+    background-size: auto;
     padding-top: $largeSpacing;
 
     .description {
